--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released loos 2.2.0
+
 2014-12-22    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in smooth-traj where a half-window's worth of frames
