Added Mint 17 to distros LOOS will build on
svn path=/software/LOOS/trunk/; revision=13831

--- a/INSTALL
+++ b/INSTALL
@@ -39,6 +39,8 @@
 |-------------------|-----------|--------|-------|                             
 | Manjaro 0.8       |     +     |   +    | T     |                             
 |-------------------|-----------|--------|-------|                             
+| Mint 17           |     +     |   +    | T     |                             
+|-------------------|-----------|--------|-------|                             
 | Slackware 14.1    |     +     |   +    | T     |                             
 |-------------------|-----------|--------|-------|                             
 | Windows XP        |     +     |   -    | D     |                             
