Noted recent changes
svn path=/software/LOOS/trunk/; revision=13863

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-01-09    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed the build system
+	* Changed mops to write out a time-series of molecular order parameters
+
 2015-01-07    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Removed dcd_utils.cpp and gridify()
