--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-13    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released loos 2.2.1
+
 2015-01-12    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed mops and dibmops to split using connectivity (if available)
