--- a/loos.dox
+++ b/loos.dox
@@ -1496,6 +1496,16 @@ at loos.maintainer [at] gmail.com
 namespace loos {
 
 /*! \page Changes Change Log
+\section release223 Version 2.2.3 (1-26-2015)
+\subsection r223_bugs Bug Fixes
+<ul>
+  <li> Fixed bug affecting functions in Atom, Coord, and Matrix44 that return
+       references to contained data.  They now return const refs and should
+       no longer be wrapped by swig, returning the contained value instead.
+  <li> Improved error handling in the build system
+</ul>
+
+
 \section release222 Version 2.2.2 (1-17-2015)
 \subsection r222_bugs Bug Fixes
 <ul>
