fixed missing URL for the lipid library (I'd fixed it in one part of the manual, but not the other
svn path=/software/LOOS/trunk/; revision=13926

--- a/Packages/OptimalMembraneGenerator/doc/doc.tex
+++ b/Packages/OptimalMembraneGenerator/doc/doc.tex
@@ -271,7 +271,8 @@ line.  For example, the POPC example below would be run as ``{\tt
 the examples take about 10 minutes to run (your mileage may vary).
 
 Note: if you haven't downloaded a lipid library yet, now would be a really
-good time to do so.  You can get one from \url{http://FIXTHISURLSOON}.
+good time to do so.  You can get one from
+\url{http://sourceforge.net/projects/loos/files/loos\%20material/lipid_library.tgz/download}.
  
 
 
