--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-26    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released 2.2.3
+
 2015-01-23    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bugs affecting functins in atoms, coords, and matrix44 that return
