--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-25    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in fcontacts resulting in NaN's in output if there
+	are no target atoms near the probe.
+
 2015-02-19    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in merge-traj that required downsampled dcd filename to operate
