Now supports range of frames to use
svn path=/software/LOOS/trunk/; revision=14439

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-05-28    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed handling of DEBUG in setup scripts
+	* Changed order_params tool to support ranges for what frames to use
+
 2015-04-10    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in operator overloadings for GCoords in PyLOOS
